8227123: Assertion failure when setting SymbolTableSize larger than 2^17 (131,072)

Increase max size for SymbolTable and fix experimental option range.  Fix option range test to include experimental options.

Reviewed-by: jiangli, dholmes, hseigel, gziemski